[tool.poetry]
name = "hooky"
version = "0.1.0"
description = ""
authors = ["Mike Groves <mike@papabearsoftware.com>"]

[tool.poetry.dependencies]
python = "^3.9"
APScheduler = "^3.6.3"
Flask-Injector = "^0.12.3"
Flask-REST = "^1.3"
SQLAlchemy = "^1.3.20"
pydantic = {extras = ["dotenv"], version = "^1.7.3"}
psycopg2 = "^2.8.6"
Flask-Pydantic = "^0.4.0"
requests = "^2.25.0"
Flask = "^1.1.2"
gunicorn = "^20.0.4"
gevent = "^20.9.0"
AsyncScheduler = "^0.2.0"
anyio = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
